fix: content alignment

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@ body,
 #app {
   display: flex;
   flex-direction: column;
+
+  align-items: center;
+  justify-content: center;
 }
 
 .box {
